Fixed layout problems

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *, body, html {
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
-  margin: 0;
+  /* margin: 0; */
   line-height: 1.5;
 }
 
@@ -15,11 +15,13 @@
 
 body {
   background-color: #333;
+  margin: 20px;
 }
 
 h3 {
   font-family: 'Merienda One', cursive;
   font-size: 1.5rem;
+  margin: 0;
 }
 
 .centre {
@@ -35,6 +37,7 @@ h3 {
 
 .wrapper {
   max-width: 400px;
+  width: fit-content;
   margin: 40px auto;
   padding: 30px;
   background: #444;
@@ -181,7 +184,7 @@ h3 {
 }
 
 .swatch:hover, .swatch.active {
-  border: 1px solid white;
+  border: 2px solid white;
   /* transform: scale(1.2); */
   /* transition: all 0.3s ease; */
 }
@@ -276,15 +279,15 @@ h3 {
 }
 
 .text-grey {
-  color: #999;
+  color: #ccc;
 }
 
 .text-grey > a {
-  color: #aaa;
+  color: #e0e0e0;
 }
 
 .text-grey > a:hover {
-  color: #ccc;
+  color: #fff;
 }
 
 .text-center {
